# dotfiles

./: .bash_aliases  .bash_aliases_arch  .bash_aliases_debian  .bashrc  .dotfiles_cola  .gitconfig  .gitignore  .gtkrc-2.0  .pdbrc  .profile  .pythonrc  .zshrc  adicionar_arquivos_config_git.sh  bem_vindo.py  cola_clamav.txt  meus_programas_do_github.txt  sites_interessantes.txt
.arquivos/: .xonshrc  Windows7_x86-x64_ptBR_Pack_MSDN_archive.torrent  chaves do windows 10.txt  chaves do windows 7.txt  configuracoes_e_observacoes_para_o_arch_linux.txt  meu_tema_verde.rasi
.arquivos/arquivos_de_configurações/: exemplo_config_programas_vpn.ini  exemplo_config_vpn.ini
.atom/: .atom-socket-secret-none-1.48.0  config.cson  keymap.cson  nohup.out  snippets.cson
.atom/.apm/: .apmrc  anonymous-cli-metrics.json
.atom/blob-store/: BLOB  MAP
.atom/storage/: application.json
.config/Atom/: Cookies  LOG  LOG.old  Network Persistent State  QuotaManager
.config/Thunar/: accels.scm  uca.xml
.config/bspwm/: bspwmrc
.config/gtk-3.0/: settings.ini
bem_vindo/: .gitignore  compilar_e_linkar.sh  main.spec  poetry run python3 bem_vindo.py exemplo de comando  pyproject.toml
ferramentas_usuario/: _utils.py  conectar_vpn.py  desconectar_vpn.py  interface.glade  interface.glade~  mudar_wallpaper.py  nome_ultimo_container.py  programa_com_vpn.py  pyproject.toml
formatação/: _utils.py  atom.pacotes  configuracoes.json  fazer_backup.py  interfaces.py  post_install.py  pre_install.py  restaurar_backup.py  sistemas.json
git/: dicas para comandos git.txt
mensagens/: main.py
(+95 files in other folders)
